#
# Copyright (C) 2008 Doug Judd (Zvents, Inc.)
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
# 02110-1301, USA.
#

add_subdirectory(dfsclient)
add_subdirectory(dumplog)
add_subdirectory(hyperspace)
add_subdirectory(hypertable)
add_subdirectory(merge_diff)
add_subdirectory(metalog_dump)
add_subdirectory(prepend_md5)
add_subdirectory(prune_tsv)
add_subdirectory(rsclient)
add_subdirectory(rsstat)
add_subdirectory(serverup)
add_subdirectory(Lib)
add_subdirectory(load_generator)
add_subdirectory(get_property)
